cluster/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: truconses/t2:database
          volumeMounts:
            - name: mysql-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-volume
          hostPath:
            path: /mnt/my-app-data  # ajustar
