cluster/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
    - port: 8080
      targetPort: 8080
      nodePort: 30000  # Porta externa para acessar o frontend
